cloud-infra-macros/tests/fails/log_retention_invalid_value.rs
use cloud_infra_macros::log_retention;

fn example() {
    let retention = log_retention!(15);
}

fn main() {}